--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </section>
             <section class=" item suv-sec">
                 <img class="sec-img" src="images/icon-suvs.svg" alt="suv_svg"/>
-                <h2>SUVs</h2>
+                <h2>SUVS</h2>
                 <p class="text" >Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
                     and off-road adventures.</p>
                 <button type="submit" class="btn btn-suv">Learn More</button>
