--- a/index.html
+++ b/index.html
@@ -1,36 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Card Preview</title>
-    <link rel="stylesheet" href="style.css"/>
+    <title>Frontend Mentor | 3-column preview card component</title>
+    <style>
+        .attribution {
+            font-size: 11px;
+            text-align: center;
+        }
+
+        .attribution a {
+            color: hsl(228, 45%, 44%);
+        }
+
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        main {
+            height: 95vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        section {
+            border-radius: 14px;
+            overflow: hidden;
+            max-width: 900px;
+            display: flex;
+            justify-content:center;
+            flex-direction: row;
+            margin: auto 0;
+            background-color: aqua;
+        }
+
+        section>div {
+            display: flex;
+            flex-direction: column;
+            flex: 1 1 300px;
+            gap: 3rem;
+            color: rgba(255, 255, 255, 1);
+            font-size: 11px;
+            align-items:flex-start;
+            justify-content: left;
+            /* filter: blur(0.7px); */
+            padding: 2rem 5rem 2rem 2rem;
+        }
+
+        div>p {
+            font-size: 1rem;
+        }
+        div>h1 {
+            text-transform: uppercase;
+            font-size: xx-large;
+            font-weight: 700;
+            
+        }
+   
+        button {
+            margin-top: 2rem;
+            padding: 5% 20%;
+            border: 1px solid white;
+            border-radius: 34px;
+            font-size:1rem;
+        }
+
+        section>div:first-child {
+            background-color: hsl(31, 77%, 52%);
+        }
+
+        section>div:nth-child(2) {
+            background-color: hsl(184, 100%, 22%);
+        }
+
+        section>div:last-child {
+            background-color: hsl(179, 100%, 13%);
+
+        }
+
+        button:hover {
+            background-color: inherit;
+            border: 1px solid black;
+        }
+
+        @media (max-width:920px) {
+            section {
+                flex-direction: column;
+            }
+
+            div>p {
+                font-size: 27px;
+
+            }
+
+            div>h1 {
+                font-size: xx-large;
+                font-weight: 700;
+
+            }
+
+            .icon {
+                margin-bottom: 7%;
+            }
+
+        }
+    </style>
 </head>
+
 <body>
     <main>
-        <div class="container">
-            <section class=" item sedan-sec">
-                <img class="sec-img" src="images/icon-sedans.svg" alt="sedan_svg"/>
-                <h2>SEDANS</h2>
-                <p class="text">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+        <section>
+            <div>
+                <div class="icon"><img src="./images/icon-sedans.svg" alt=""></div>
+                <h1>Sedans</h1>
+                <p>
+                    Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
                     or on your next road trip.</p>
-                <button type="submit" class="btn btn-sedan">Learn More</button>
-            </section>
-            <section class=" item suv-sec">
-                <img class="sec-img" src="images/icon-suvs.svg" alt="suv_svg"/>
-                <h2>SUVS</h2>
-                <p class="text" >Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+                <button>learn more</button>
+            </div>
+            <div>
+                <div class="icon"><img src="./images/icon-suvs.svg" alt=""></div>
+                <h1>SUVs</h1>
+                <p>
+                    Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
                     and off-road adventures.</p>
-                <button type="submit" class="btn btn-suv">Learn More</button>
-            </section>
-            <section class="item luxury-sec">
-                <img  class="sec-img" src="images/icon-luxury.svg" alt="lux_svg"/>
-                <h2>LUXURY</h2>
-                <p class="text">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+                <button>learn more</button>
+            </div>
+            <div>
+                <div class="icon"><img src="./images/icon-luxury.svg" alt=""></div>
+                <h1>Luxury</h1>
+                <p>
+                    Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
                     rental and arrive in style.</p>
-                <button type="submit" class="btn btn-luxury">Learn More</button>
-            </section>
-        </div>
+                <button>learn more</button>
+            </div>
+        </section>
+
     </main>
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">samson mamuye</a>.
+    </div>
+
+
 </body>
+
 </html>
